--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "yarn eslint src --max-warnings=0",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -14,7 +20,8 @@
     "eslint-plugin-react": "^7.29.4",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hooks": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
@@ -24,7 +31,8 @@
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-hooks": "^4.4.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.4.0",
     "prettier": "2.6.2",
     "typescript": "4.6.3"
   }
