--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
